--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -205,16 +205,17 @@
 
     \subsection{Analyzing an Execution}
 
-    CrashSimulator's replay process consists of CrashSimulator launching the
+    CrashSimulator's replay process consists of launching the
     application under test as a child process and interceeding in its execution
     at appropriate times in order to simulate the results and side effects of any
-    system calls the application makes.  Because the system call trace being
-    replayed has been mutated to reflect the chosen anomaly, this process
-    exposes the application to that anomaly. After the replayed execution
+    system call the application might make.
+    The trace is mutated to reflect the chosen anomaly, ensuring the process
+    will reveal the anomaly to the application.
+    After the replayed execution
     concludes, CrashSimulator is able to use the ending state of the checker to
     report whether or not the anomalous situation was handled appropriately.
     CrashSimulator
-    can use two types of checkers that each serve slightly different purposes.
+    can use two types of checkers, which each serve a slightly different purpose.
 
     %The up front effort
     %in this process only needs to be done once. One of CrashSimulator's major
@@ -247,26 +248,26 @@
     \paragraph{The Default Checker}
 
     When CrashSimulator injects anomalous behavior into a replay execution it is
-    done with the intention that the application under test deal with this
-    anomaly in some way. For example, many applications
+    expected that the application under test will deal with this
+    anomaly in some way. For example, applications
     can be expected to behave differently when
-    the structure returned by a call to {\tt stat()} indicates that the target file
-    is a symlink rather than a regular file.
-    When there are numerous very different ways an
+    the structure returned by a call to {\tt stat()} indicates the target file
+    is a symlink, rather than a regular file.
+    When there are numerous ways an
     application could correctly handle a given anomaly, CrashSimulator 
-    can use a generic ``default checker''.  The default checker
+    can use a generic ``default checker''.  This default checker
     is based on the assumption that an application's efforts to deal with the anomaly
     will result in it executing different program paths (and therefore different
-    system calls) than were executed when the system call trace being replayed
+    system calls) than were executed when the system call trace
     was recorded.  If the application being replayed does not
-    alter its behavior to deal with the anomaly, the application has not
-    correctly handled the anomaly -- a failing result.  Alternatively, if the
-    application deviates from the behavior recorded in the system call trace
-    driving the replay, it is likely that the application is taking some action
-    to handle the injected condition -- an indication of possibly correct
+    alter its behavior to deal with the anomaly, it has not
+    correctly handled this flaw --- a failing result.  Alternatively, if the
+    application does deviate,
+    it is likely that the application is taking some action
+    to handle the injected condition --- an indication of possibly correct
     behavior.
 
-    This approach is often sufficient. % because in reality, 
+    This approach is often sufficient to classify application behavior. % because in reality, 
     %a test can only tell us if
     %an application performs a specific bad behavior in a specific situation.  A
     %test cannot prove that an application is bug free in the same situation. 
@@ -290,49 +291,49 @@
     ultimately accepts a given replay execution is determined by the ending
     states of the checkers monitoring the execution.
 
+    %% Anomaly Examples subsection removed on recommendation from Lois
+    %% \subsection{Anomaly Examples}
+    %% \label{subsec:anomalyexamples}
+    %% Anomalies can be as subtle as a single configuration flag being set
+    %% differently under specific circumstances.  In BSD and OS X sockets returned
+    %% by the {\tt accept()} system call inherit the values of the {\tt
+    %%   O\_NONBLOCK} and {\tt O\_ASYNC} flags from their parent socket.  In Linux,
+    %% these values are not inherited.  As a result, the correct behavior is to
+    %% always explicitly set these flags to the appropriate values on child
+    %% sockets.  This environmental difference presented itself as a bug
+    %% in the socket implementation of Python 3.2.  Python took advantage of
+    %% non-blocking sockets in order to implement timeout capabilities for sockets.
+    %% Because Python did not specifically set the {\tt O\_NONBLOCK} flag on the
+    %% child sockets underlying its socket object abstraction, it was possible that,
+    %% depending on the environment, the Python socket object would report the
+    %% socket as either blocking or non-blocking while the actual underlying socket
+    %% was configured for the opposite behavior.
 
-    \subsection{Anomaly Examples}
-    \label{subsec:anomalyexamples}
-    Anomalies can be as subtle as a single configuration flag being set
-    differently under specific circumstances.  In BSD and OS X sockets returned
-    by the {\tt accept()} system call inherit the values of the {\tt
-      O\_NONBLOCK} and {\tt O\_ASYNC} flags from their parent socket.  In Linux,
-    these values are not inherited.  As a result, the correct behavior is to
-    always explicitly set these flags to the appropriate values on child
-    sockets.  This environmental difference presented itself as a bug
-    in the socket implementation of Python 3.2.  Python took advantage of
-    non-blocking sockets in order to implement timeout capabilities for sockets.
-    Because Python did not specifically set the {\tt O\_NONBLOCK} flag on the
-    child sockets underlying its socket object abstraction, it was possible that,
-    depending on the environment, the Python socket object would report the
-    socket as either blocking or non-blocking while the actual underlying socket
-    was configured for the opposite behavior.
+    %% Anomalies can also be found around more complex operations.  Moving files
+    %% around in a filesystem is an extremely common operation that, on face value,
+    %% seems to fairly simplistic to carry out.  In reality, things become complex
+    %% quickly once a few implementation details are taken into account: namely
+    %% limitations in Linux's {\tt rename()} system call and the way Linux's
+    %% directory hierarchy can abstract away complicated device configurations.
 
-    Anomalies can also be found around more complex operations.  Moving files
-    around in a filesystem is an extremely common operation that, on face value,
-    seems to fairly simplistic to carry out.  In reality, things become complex
-    quickly once a few implementation details are taken into account: namely
-    limitations in Linux's {\tt rename()} system call and the way Linux's
-    directory hierarchy can abstract away complicated device configurations.
-
-    Trivial cases of moving a file (i.e. those where the source and destination
-    are on the same device) are accomplished using the {\tt rename()} system
-    call.  In cases where the source and destination are not on the same device
-    this system call fails and the application must handle the operation
-    manually. This means that \emph{any} application that moves files around on
-    a Linux system must be able to deal with the situation where some part of
-    the directory structure may physically reside on a different device.
-    During our evaluation, we modeled what
-    it takes to move a file correctly using the GNU Coreutils {\tt mv} command
-    as our ``gold standard.''  We found many applications do not handle the
-    above situation correctly including the {\tt shutils} module from the Python
-    2.7.9 standard library.  It did not correctly preserve timestamps across the
-    move, it did not correctly apply extended file attributes to the destination
-    file after the move, and it did not verify the file's inode number between
-    initially examining the source file and when the copy was initiated (a
-    common cause of race conditions).  Failing to perform these operations
-    exposes applications relying on {\tt shutils} to misordered processing, data
-    loss, or security issues.
+    %% Trivial cases of moving a file (i.e. those where the source and destination
+    %% are on the same device) are accomplished using the {\tt rename()} system
+    %% call.  In cases where the source and destination are not on the same device
+    %% this system call fails and the application must handle the operation
+    %% manually. This means that \emph{any} application that moves files around on
+    %% a Linux system must be able to deal with the situation where some part of
+    %% the directory structure may physically reside on a different device.
+    %% During our evaluation, we modeled what
+    %% it takes to move a file correctly using the GNU Coreutils {\tt mv} command
+    %% as our ``gold standard.''  We found many applications do not handle the
+    %% above situation correctly including the {\tt shutils} module from the Python
+    %% 2.7.9 standard library.  It did not correctly preserve timestamps across the
+    %% move, it did not correctly apply extended file attributes to the destination
+    %% file after the move, and it did not verify the file's inode number between
+    %% initially examining the source file and when the copy was initiated (a
+    %% common cause of race conditions).  Failing to perform these operations
+    %% exposes applications relying on {\tt shutils} to misordered processing, data
+    %% loss, or security issues.
 
 %    These deficiencies are not just inconveniences.  They can have a real world
 %    impact on a system's operation and security.  Consider the case of not
