--- a/CSApproachDetails.tex
+++ b/CSApproachDetails.tex
@@ -88,28 +88,72 @@
 
      
 
-    \subsection{Identifying Anomalies}
+    \subsection{Anomaly Identification}
     
     Prior to beginning CrashSimulator's testing
-    process, a set of unusual environment conditions (which we refer to as anomalies)
-    to test against
-    must be identified.  This can be accomplished either manually or by
+    process, we identified a set of unusual conditions (which we refer to as anomalies)
+    which can be present in an environment to test against.
+    This can be accomplished either manually or by
     examining results of other applications running in the target environment with existing
     tools.  This work utilized the results of both
     NetCheck~\cite{Zhuang_NSDI_2014} and CheckAPI~\cite{rasley2015detecting}, as
     well as manual analysis, to develop the set of anomalies used in our
-    evaluation.  NetCheck is readily able to identify a wide variety of anomalous
+    evaluation.  NetCheck, which can be thought of as a precursor to
+    CrashSimulator, is a too that can determine the cause of a failure in a
+    networked application, without any specific knowledge of the application or
+    its language. It is readily able to identify a wide variety of anomalous
     behaviors related to network communication between one or more
-    hosts.  CheckAPI performs a similar function by comparing behavior of an API
+    hosts.  CheckAPI performs a similar function by comparing the behavior of an API
     implementation to a reference model.
 
     Another source of anomalies is the public bug trackers of projects available
     on the web.  If the presence of a bug is indicated by a series of system
-    calls then a checker that identifies it during execution can be constructed. This
+    calls, then a checker can be constructed to identify it during execution. This
     is ideal when determining whether or not an application is vulnerable to a
     widely publicized bug.  Similarly, bugs can be taken from similar projects
     in order to expand a project's set of available anomalies.
-    In the long term, we envision a public repository of anomalies along with CrashSimulator test patterns that can be applied to new or existing applications.
+
+    In selecting anomalies for use it is important to understand that they
+    can be as subtle as a single configuration flag being set
+    differently under specific circumstances.  In BSD and OS X sockets returned
+    by the {\tt accept()} system call inherit the values of the {\tt
+      O\_NONBLOCK} and {\tt O\_ASYNC} flags from their parent socket.  In Linux,
+    these values are not inherited.  As a result, the correct behavior is to
+    always explicitly set these flags to the appropriate values on child
+    sockets.  This environmental difference presented itself as a bug
+    in the socket implementation of Python 3.2.  Python took advantage of
+    non-blocking sockets in order to implement timeout capabilities for sockets.
+    Because Python did not specifically set the {\tt O\_NONBLOCK} flag on the
+    child sockets underlying its socket object abstraction, it was possible that,
+    depending on the environment, the Python socket object would report the
+    socket as either blocking or non-blocking while the actual underlying socket
+    was configured for the opposite behavior.
+
+    Anomalies can also be found around more complex operations.  Moving files
+    around in a filesystem is an extremely common operation that, on face value,
+    seems to fairly simplistic to carry out.  In reality, things become complex
+    quickly once a few implementation details are taken into account: namely
+    limitations in Linux's {\tt rename()} system call and the way Linux's
+    directory hierarchy can abstract away complicated device configurations.
+
+    Trivial cases of moving a file (i.e. those where the source and destination
+    are on the same device) are accomplished using the {\tt rename()} system
+    call.  In cases where the source and destination are not on the same device
+    this system call fails and the application must handle the operation
+    manually. This means that \emph{any} application that moves files around on
+    a Linux system must be able to deal with the situation where some part of
+    the directory structure may physically reside on a different device.
+    During our evaluation, we modeled what
+    it takes to move a file correctly using the GNU Coreutils {\tt mv} command
+    as our ``gold standard.''  We found many applications do not handle the
+    above situation correctly including the {\tt shutils} module from the Python
+    2.7.9 standard library.  It did not correctly preserve timestamps across the
+    move, it did not correctly apply extended file attributes to the destination
+    file after the move, and it did not verify the file's inode number between
+    initially examining the source file and when the copy was initiated (a
+    common cause of race conditions).  Failing to perform these operations
+    exposes applications relying on {\tt shutils} to misordered processing, data
+    loss, or security issues.
 
     \subsection{Converting Anomalies to System Call Sequences}
 
@@ -296,49 +340,6 @@
     ultimately accepts a given replay execution is determined by the ending
     states of the checkers monitoring the execution.
 
-    %% Anomaly Examples subsection removed on recommendation from Lois
-    %% \subsection{Anomaly Examples}
-    %% \label{subsec:anomalyexamples}
-    %% Anomalies can be as subtle as a single configuration flag being set
-    %% differently under specific circumstances.  In BSD and OS X sockets returned
-    %% by the {\tt accept()} system call inherit the values of the {\tt
-    %%   O\_NONBLOCK} and {\tt O\_ASYNC} flags from their parent socket.  In Linux,
-    %% these values are not inherited.  As a result, the correct behavior is to
-    %% always explicitly set these flags to the appropriate values on child
-    %% sockets.  This environmental difference presented itself as a bug
-    %% in the socket implementation of Python 3.2.  Python took advantage of
-    %% non-blocking sockets in order to implement timeout capabilities for sockets.
-    %% Because Python did not specifically set the {\tt O\_NONBLOCK} flag on the
-    %% child sockets underlying its socket object abstraction, it was possible that,
-    %% depending on the environment, the Python socket object would report the
-    %% socket as either blocking or non-blocking while the actual underlying socket
-    %% was configured for the opposite behavior.
-
-    %% Anomalies can also be found around more complex operations.  Moving files
-    %% around in a filesystem is an extremely common operation that, on face value,
-    %% seems to fairly simplistic to carry out.  In reality, things become complex
-    %% quickly once a few implementation details are taken into account: namely
-    %% limitations in Linux's {\tt rename()} system call and the way Linux's
-    %% directory hierarchy can abstract away complicated device configurations.
-
-    %% Trivial cases of moving a file (i.e. those where the source and destination
-    %% are on the same device) are accomplished using the {\tt rename()} system
-    %% call.  In cases where the source and destination are not on the same device
-    %% this system call fails and the application must handle the operation
-    %% manually. This means that \emph{any} application that moves files around on
-    %% a Linux system must be able to deal with the situation where some part of
-    %% the directory structure may physically reside on a different device.
-    %% During our evaluation, we modeled what
-    %% it takes to move a file correctly using the GNU Coreutils {\tt mv} command
-    %% as our ``gold standard.''  We found many applications do not handle the
-    %% above situation correctly including the {\tt shutils} module from the Python
-    %% 2.7.9 standard library.  It did not correctly preserve timestamps across the
-    %% move, it did not correctly apply extended file attributes to the destination
-    %% file after the move, and it did not verify the file's inode number between
-    %% initially examining the source file and when the copy was initiated (a
-    %% common cause of race conditions).  Failing to perform these operations
-    %% exposes applications relying on {\tt shutils} to misordered processing, data
-    %% loss, or security issues.
 
 %    These deficiencies are not just inconveniences.  They can have a real world
 %    impact on a system's operation and security.  Consider the case of not
